Add message div

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </div>
       <button type="submit">Start</button>
     </form>
+    <span id="msg">
+      Player 1 plays cross. Player 2 plays circle. Cross begins!
+    </span>
     <div class="gameboard"></div>
   </body>
 </html>
