Add input placeholders

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <form action="#" onsubmit="game.initializeGame(event)">
       <div>
         Player 1
-        <input type="text" name="p1" id="p1" required />
+        <input type="text" name="p1" id="p1" placeholder="Cross" required />
       </div>
       <div>
         Player 2
-        <input type="text" name="p2" id="p2" required />
+        <input type="text" name="p2" id="p2" placeholder="Circle" required />
       </div>
       <button type="submit">Start</button>
     </form>
